# mypkg

./: README.md  package.xml  setup.py  test.bash  test.py
.github/workflows/: test.yml
mypkg/: listener.py  omikuji_publisher.py  talker.py
mypkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mypkg/log/: latest_build
mypkg2/: omikuji_publisher.py  test.bash
test/: test.bash
