<?xml version="1.0"?>
<package format="3">
  <name>mypkg</name>
  <version>0.1.0</version>
  <description>My first ROS2 package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>

